# voice-input

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .worktree-status  AGENTS.md  README.md  VoiceInput.py  client.sh  coverage.json  project-context.md  pyproject.toml  ruff.toml  server.py
.sisyphus/plans/: refactoring-v2.md
config/: config.toml  funasr-wss-server.service
docs/: quick-spec-zero-latency.md
scripts/: funasr-wss-server.sh  manage-systemd.sh
src/: __init__.py
src/tests/: test_ui_manager.py
src/voice_input/: __init__.py  asr_client.py  asr_config.py  audio_engine.py  audio_recorder.py  config_loader.py  connection_manager.py  interfaces.py  socket_manager.py  state_manager.py  toggle.py  voice_gui.py  voice_manager.py
src/voice_input/audio/: audio_recorder.py
src/voice_input/gui/: __init__.py  _gtk_init.py  text_injector.py  ui_manager.py  voice_app.py  voice_window.py
src/voice_input/network/: __init__.py  connection_manager.py
src/voice_input/services/: __init__.py  event_bus.py  service_factory.py  voice_service.py
tests/: manual_verification_checklist.py
tests/integration/: test_voice_input_e2e.py
tests/unit/: conftest.py  test_config_loader.py  test_dependencies.py  test_dev_tools.py  test_git_config.py  test_project_structure.py  test_voice_recorder.py
