[project]
name = "voice-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
