[project]
name = "voice-input"
version = "0.1.0"
description = "Linux 桌面中文语音输入法 (基于 FunASR)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Josephx", email = "your@email.com" }
]
license = { text = "MIT" }
dependencies = [
    "funasr>=1.0",
    "sounddevice>=0.4",
    "torch>=2.0",
    "torchaudio>=2.0",
    "PyGObject>=3.56",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "numpy>=1.24",
    "websockets>=16.0",
    "psutil>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 忽略规则
ignore = [
    "PLR0913",  # 允许参数过多
    "PLW0603",  # 允许全局变量更新
    "N806",     # 允许函数内变量大写
    "PLC0415",  # 允许函数内导入
    "E402",     # 允许模块级导入在文件顶部之后（GTK 需要）
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/,/nhttps://mirrors.cloud.tencent.com/pypi/simple/,/nhttps://mirrors.huaweicloud.com/repository/pypi/simple//n"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["misc", "union-attr"]
ignore_missing_imports = true

[project.scripts]
voice-input = "voice_input.voice_gui:main"
voice-input-toggle = "voice_input.toggle:main"
